@@ -242,7 +242,6 @@ void LedgerInvariant::Alloc(int len)
 
     Strings["GroupQuoteShortProductName"    ] = &GroupQuoteShortProductName    ;
     Strings["GroupQuoteIsNotAnOffer"        ] = &GroupQuoteIsNotAnOffer        ;
-    Strings["GroupQuoteRidersHeader"        ] = &GroupQuoteRidersHeader        ;
     Strings["GroupQuoteRidersFooter"        ] = &GroupQuoteRidersFooter        ;
     Strings["GroupQuotePolicyFormId"        ] = &GroupQuotePolicyFormId        ;
     Strings["GroupQuoteStateVariations"     ] = &GroupQuoteStateVariations     ;
@@ -739,7 +738,6 @@ void LedgerInvariant::Init(BasicValues* b)
 
         GroupQuoteShortProductName     = p.datum("GroupQuoteShortProductName"     );
         GroupQuoteIsNotAnOffer         = p.datum("GroupQuoteIsNotAnOffer"         );
-        GroupQuoteRidersHeader         = p.datum("GroupQuoteRidersHeader"         );
         GroupQuoteRidersFooter         = p.datum("GroupQuoteRidersFooter"         );
         GroupQuotePolicyFormId         = p.datum("GroupQuotePolicyFormId"         );
         GroupQuoteStateVariations      = p.datum("GroupQuoteStateVariations"      );
@@ -1090,7 +1088,6 @@ LedgerInvariant& LedgerInvariant::PlusEq(LedgerInvariant const& a_Addend)
 
     GroupQuoteShortProductName    = a_Addend.GroupQuoteShortProductName;
     GroupQuoteIsNotAnOffer        = a_Addend.GroupQuoteIsNotAnOffer    ;
-    GroupQuoteRidersHeader        = a_Addend.GroupQuoteRidersHeader    ;
     GroupQuoteRidersFooter        = a_Addend.GroupQuoteRidersFooter    ;
     GroupQuotePolicyFormId        = a_Addend.GroupQuotePolicyFormId    ;
     GroupQuoteStateVariations     = a_Addend.GroupQuoteStateVariations ;
